# victronSolarMonitor

./: CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  install.sh
.github/: constants.env
Results/: ChargerData.csv_2024-11-01.COPY  ChargerData.csv_2024-11-01.csv  ChargerData.csv_2024-11-02.csv  ChargerData.csv_2024-11-03.csv  ChargerData.csv_2024-11-04.csv  ChargerData.csv_2024-11-05.csv  ChargerData.csv_2024-11-06.csv  ChargerData.csv_2024-11-07.csv  ChargerData.csv_2024-11-08.csv  ChargerData.csv_2024-11-09.csv  Readme
Results/MATLABcalcs/: Graphing.m  Pe.mat  Pw.mat  dti.mat  idx.mat  p_in.mat  testDat20241107.mat  testDat20241108.mat  testDat20241109.mat
Tests/: aesTest.cpp  aesTest2.cpp  bleTest.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
display/: solar_controller.py  solar_monitor.py
fuzz_test/: CMakeLists.txt
include/: bleParse.h  datFunc.h  mfgRegisterDat.h
include/victronSolarMonitor/: sample_library.hpp
includes/: AES.h  BLE.h  common.h  mfgRegisterDat.h
src/: AES.cpp  BLE.cpp  CMakeLists.txt  bleParse.cpp  config.txt  datFunc.cpp  main.cpp  mfgRegisterDat.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
